fix fullbleed

--- a/src/util/layout.css
+++ b/src/util/layout.css
@@ -35,6 +35,7 @@
 
 .fullbleed {
     position: relative;
+    width: 100vw;
     left: 50%;
     transform: translateX(-50vw);  
 }
